@@ -152,10 +152,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.0</version>
                 <configuration>
-                    <forkCount>3</forkCount>
-                    <argLine>-Xmx512m</argLine>
+                    <parallel>classes</parallel>
+                    <threadCount>3</threadCount>
+                    <!-- Needed for test -->
+                    <argLine>--add-opens net.javacrumbs.shedlock.spring/net.javacrumbs.shedlock.spring=spring.core
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
